--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ h1 {
   padding-top: 100px;
   text-align: left;
   text-transform: uppercase;
+  margin: 10 auto;
   width: 70%;
 }
 
@@ -48,6 +49,7 @@ h2 {
   line-height: 26px;
   padding-bottom: 30px;
   text-align: left;
+  margin: 10 auto;
   width: 70%;
 }
 h3{
