--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 /* Add the ID selector to this CSS rule */
 
 #header-text {
-  margin: 10 auto;
+  margin: 10px;
   position: left;
   text-align: left;
   top: 10%;
@@ -34,8 +34,8 @@ h1 {
   padding-top: 100px;
   text-align: left;
   text-transform: uppercase;
-  margin: 10 auto;
-  width: 70%;
+  margin: 10px;
+  width: 75%;
 }
 
 h2 {
@@ -49,8 +49,8 @@ h2 {
   line-height: 26px;
   padding-bottom: 30px;
   text-align: left;
-  margin: 10 auto;
-  width: 70%;
+  margin: 10px;
+  width: 75%;
 }
 h3{
   color: rgba(0, 0, 0, 0.5);
